refactor: Replace Arrays#asList by List#of
Reduces compiler warnings when List#of() should be preferred.
Note that an implications are:
- resulting lists are immutable
- eleements must not be null