@@ -18,7 +18,6 @@ package org.operaton.bpm.engine.impl;
 
 import java.io.Serial;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
@@ -879,7 +878,7 @@ public class HistoricProcessInstanceQueryImpl extends AbstractVariableQueryImpl<
   @Override
   public HistoricProcessInstanceQuery executedActivityIdIn(String... ids) {
     ensureNotNull(BadUserRequestException.class, "activity ids", (Object[]) ids);
-    ensureNotContainsNull(BadUserRequestException.class, "activity ids", Arrays.asList(ids));
+    ensureNotContainsNull(BadUserRequestException.class, "activity ids", List.of(ids));
     this.executedActivityIds = ids;
     return this;
   }
@@ -887,7 +886,7 @@ public class HistoricProcessInstanceQueryImpl extends AbstractVariableQueryImpl<
   @Override
   public HistoricProcessInstanceQuery activeActivityIdIn(String... ids) {
     ensureNotNull(BadUserRequestException.class, "activity ids", (Object[]) ids);
-    ensureNotContainsNull(BadUserRequestException.class, "activity ids", Arrays.asList(ids));
+    ensureNotContainsNull(BadUserRequestException.class, "activity ids", List.of(ids));
     this.activeActivityIds = ids;
     return this;
   }
@@ -895,7 +894,7 @@ public class HistoricProcessInstanceQueryImpl extends AbstractVariableQueryImpl<
   @Override
   public HistoricProcessInstanceQuery activityIdIn(String... ids) {
     ensureNotNull(BadUserRequestException.class, "activity ids", (Object[]) ids);
-    ensureNotContainsNull(BadUserRequestException.class, "activity ids", Arrays.asList(ids));
+    ensureNotContainsNull(BadUserRequestException.class, "activity ids", List.of(ids));
     this.activityIds = ids;
     return this;
   }
