@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.impl.bpmn.behavior;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.operaton.bpm.engine.impl.Condition;
@@ -94,7 +93,7 @@ public class BpmnActivityBehavior {
     if (transitionsToTake.size() == 1) {
       execution.leaveActivityViaTransition(transitionsToTake.get(0));
     } else if (!transitionsToTake.isEmpty()) {
-      execution.leaveActivityViaTransitions(transitionsToTake, Arrays.asList(execution));
+      execution.leaveActivityViaTransitions(transitionsToTake, List.of(execution));
     } else {
       handleNoTransitions(execution, defaultSequenceFlow, outgoingTransitions);
     }
